# qt-pcl-cloud

./: CMakeLists.txt  LidarDef.h  angle.csv  clidarchannalthread.cpp  clidarchannalthread.h  clidarfilter.cpp  clidarfilter.h  convercloudthread.cpp  convercloudthread.h  cpcl.cpp  cpcl.h  lidarobject.cpp  lidarobject.h  lidarparsethread.cpp  lidarparsethread.h  main.cpp  za.txt
