cmake_minimum_required(VERSION 3.0.0)


project(lidar32 VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt5Core)
find_package(Qt5Network)



add_executable(${PROJECT_NAME}
  "main.cpp"
  "lidarobject.h"
  "lidarobject.cpp"
  "clidarchannalthread.h"
  "clidarchannalthread.cpp"
  "lidardef.h"
  "clidarfilter.h"
  "clidarfilter.cpp"
  "cpcl.h"
  "cpcl.cpp"
)


include_directories(
    F:/pcl/PCL1.8.1/3rdParty/Boost/include/boost-1_64
    F:/pcl/PCL1.8.1/3rdParty/Eigen/eigen3
    F:/pcl/PCL1.8.1/3rdParty/FLANN/include
    F:/pcl/PCL1.8.1/3rdParty/VTK/include/vtk-8.0
    F:/pcl/PCL1.8.1/3rdParty/Qhull/include
    F:/pcl/PCL1.8.1/include/pcl-1.8
    F:/pcl/PCL1.8.1/3rdParty/OpenNI2/Include
    )
link_directories(
    F:/pcl/PCL1.8.1/lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib
    F:/pcl/PCL1.8.1/3rdParty/FLANN/lib
    F:/pcl/PCL1.8.1/3rdParty/Qhull/lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib
    F:/pcl/PCL1.8.1/3rdParty/OpenNI2/Lib

    )
target_link_libraries(${PROJECT_NAME}
    Qt5::Core
    Qt5::Network
    F:/pcl/PCL1.8.1/lib/pcl_common_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_features_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_filters_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_io_ply_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_io_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_kdtree_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_keypoints_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_ml_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_octree_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_outofcore_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_people_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_recognition_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_registration_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_sample_consensus_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_search_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_segmentation_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_stereo_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_surface_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_tracking_release.lib
    F:/pcl/PCL1.8.1/lib/pcl_visualization_release.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_atomic-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_bzip2-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_chrono-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_container-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_context-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_coroutine-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_date_time-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_exception-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_fiber-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_filesystem-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_graph-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_graph_parallel-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_iostreams-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_locale-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_log-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_log_setup-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_math_c99-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_math_c99f-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_math_c99l-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_math_tr1-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_math_tr1f-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_math_tr1l-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_mpi-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_numpy3-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_numpy-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_prg_exec_monitor-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_program_options-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_python3-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_python-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_random-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_regex-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_serialization-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_signals-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_system-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_test_exec_monitor-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_thread-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_timer-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_type_erasure-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_unit_test_framework-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_wave-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_wserialization-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/Boost/lib/libboost_zlib-vc141-mt-1_64.lib
    F:/pcl/PCL1.8.1/3rdParty/FLANN/lib/flann.lib
    F:/pcl/PCL1.8.1/3rdParty/FLANN/lib/flann_cpp.lib
    F:/pcl/PCL1.8.1/3rdParty/FLANN/lib/flann_cpp_s.lib
    F:/pcl/PCL1.8.1/3rdParty/FLANN/lib/flann_s.lib
    F:/pcl/PCL1.8.1/3rdParty/Qhull/lib/qhull.lib
    F:/pcl/PCL1.8.1/3rdParty/Qhull/lib/qhullcpp.lib
    F:/pcl/PCL1.8.1/3rdParty/Qhull/lib/qhullstatic.lib
    F:/pcl/PCL1.8.1/3rdParty/Qhull/lib/qhullstatic_r.lib
    F:/pcl/PCL1.8.1/3rdParty/Qhull/lib/qhull_p.lib
    F:/pcl/PCL1.8.1/3rdParty/Qhull/lib/qhull_r.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkalglib-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkChartsCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonColor-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonComputationalGeometry-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonDataModel-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonExecutionModel-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonMath-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonMisc-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonSystem-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkCommonTransforms-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkDICOMParser-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkDomainsChemistry-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkexoIIc-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkexpat-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersAMR-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersExtraction-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersFlowPaths-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersGeneral-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersGeneric-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersGeometry-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersHybrid-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersHyperTree-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersImaging-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersModeling-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersParallel-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersParallelImaging-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersPoints-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersProgrammable-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersSelection-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersSMP-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersSources-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersStatistics-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersTexture-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersTopology-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkFiltersVerdict-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkfreetype-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkGeovisCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkgl2ps-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkhdf5-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkhdf5_hl-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingColor-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingFourier-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingGeneral-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingHybrid-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingMath-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingMorphological-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingSources-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingStatistics-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkImagingStencil-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkInfovisCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkInfovisLayout-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkInteractionImage-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkInteractionStyle-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkInteractionWidgets-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOAMR-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOEnSight-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOExodus-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOExport-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOExportOpenGL-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOGeometry-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOImage-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOImport-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOInfovis-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOLegacy-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOLSDyna-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOMINC-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOMovie-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIONetCDF-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOParallel-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOParallelXML-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOPLY-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOSQL-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOTecplotTable-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOVideo-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOXML-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkIOXMLParser-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkjpeg-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkjsoncpp-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtklibharu-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtklibxml2-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtklz4-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkmetaio-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtknetcdf_c++.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkNetCDF-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkoggtheora-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkParallelCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkpng-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkproj4-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingAnnotation-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingContext2D-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingContextOpenGL-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingFreeType-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingGL2PS-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingImage-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingLabel-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingLIC-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingLOD-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingOpenGL-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingVolume-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkRenderingVolumeOpenGL-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtksqlite-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtksys-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtktiff-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkverdict-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkViewsContext2D-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkViewsCore-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkViewsInfovis-8.0.lib
    F:/pcl/PCL1.8.1/3rdParty/VTK/lib/vtkzlib-8.0.lib

    )
